--- a/.chunkwmrc
+++ b/.chunkwmrc
@@ -107,14 +107,14 @@ chunkc set window_use_cgs_move           0
 chunkc set focused_border_color          0xff0f6288
 chunkc set focused_border_width          2
 chunkc set focused_border_radius         0
-chunkc set focused_border_skip_floating  0
+chunkc set focused_border_skip_floating  1
 chunkc set focused_border_skip_monocle   0
 
 #
 # NOTE: the following are config variables for the chunkwm-ffm plugin.
 #
 
-chunkc set ffm_bypass_modifier           fn
+chunkc set ffm_bypass_modifier           alt
 chunkc set ffm_standby_on_float          1
 
 #
@@ -134,3 +134,4 @@ chunkc tiling::rule --owner \"App Store\" --state float &
 chunkc tiling::rule --owner NSMetronome --state float &
 chunkc tiling::rule --owner Emacs --except "^$" --state tile &
 chunkc tiling::rule --owner REAPER --state float &
+chunkc tiling::rule --owner Bitwig --state float &
