--- a/.chunkwmrc
+++ b/.chunkwmrc
@@ -49,11 +49,11 @@ chunkc set custom_bar_offset_left        0
 chunkc set custom_bar_offset_right       0
 
 chunkc set global_desktop_mode           bsp
-chunkc set global_desktop_offset_top     0
-chunkc set global_desktop_offset_bottom  0
-chunkc set global_desktop_offset_left    0
-chunkc set global_desktop_offset_right   0
-chunkc set global_desktop_offset_gap     0
+chunkc set global_desktop_offset_top     5
+chunkc set global_desktop_offset_bottom  5
+chunkc set global_desktop_offset_left    5
+chunkc set global_desktop_offset_right   5
+chunkc set global_desktop_offset_gap     5
 
 #
 # NOTE: syntax for desktop-specific settings
@@ -76,7 +76,7 @@ chunkc set bsp_split_mode                optimal
 chunkc set bsp_split_ratio               0.5
 
 chunkc set monitor_focus_cycle           1
-chunkc set window_focus_cycle            monitor
+chunkc set window_focus_cycle            all
 
 chunkc set mouse_follows_focus           intrinsic
 chunkc set window_float_next             0
@@ -135,3 +135,4 @@ chunkc tiling::rule --owner NSMetronome --state float &
 chunkc tiling::rule --owner Emacs --except "^$" --state tile &
 chunkc tiling::rule --owner REAPER --state float &
 chunkc tiling::rule --owner Bitwig --state float &
+chunkc tiling::rule --owner Dash --state float &
